# CCR

./: .Makefile.coq.d  .gitignore  .gitlab-ci.yml  .merlin  Hoare2'.v  Hoare2.v  Hoare3.v  LICENSE  MWApp90proof.v  MWCImp9proofGet.v  MWCImp9proofLoop.v  MWCImp9proofPut.v  Makefile  README.md  admits.sh  coq-cccr.opam  coq-ccr.opam  diff  patch
builddep/: cccr-builddep.opam
deprecated/: MemClient0.v  MemClient01proof.v  MemClient1.v  MemMemClient.v
ems/: Behavior.v  IRed.v  ModSem.v  ModSemE.v  STS.v  STS2ITree.v  STSNorm.v  SimGlobal.v  SimGlobal2.v  SimGlobalOld.v  SimGlobaldouble.v  SimModSem.v  SimModSem2.v  SimModSemHint.v  SimModSemL.v  SimModSemOld.v  SimModSemdouble.v  SimSTS2.v  SimSTSNoIndex.v  SimSTSOld.v  Skeleton.v
extract/: Example0.v  debug.sh  extraction.v  main.ml  run.sh
imp/: CsmProofs.v  IMem0.v  IMem01proof.v  IMem1.v  Imp.v  Imp2Asm.v  Imp2AsmProof.v  Imp2Clight.v  Imp2ClightSim.v  Imp2Csharpminor.v  Imp2CsharpminorArith.v  Imp2CsharpminorGenv.v  Imp2CsharpminorLink.v  Imp2CsharpminorMatch.v  Imp2CsharpminorMem.v  Imp2CsharpminorSepComp.v  Imp2CsharpminorSim.v  ImpNotations.v  ImpProofs.v  SimSTS2.v
imp_compile/: ClightToAsm.v  ImpFactorial.v  ImpKnot.v  ImpLink.v  ImpMem1.v  ImpMem2.v  ImpMutsum.v  ImpSimple.v  Imp_factorial.v  Imp_simple.v  build.sh  configure  extraction.v  extractionMachdep.v  main.ml  run.sh  test.ml
lib/: AList.v  Any.v  Axioms.v  Coqlib.v  DisableSsreflect.v  IRed.v  ITreelib.v  Red.v  Rewrite.v  sflib.v
mem/: Mem0.v  Mem01proof.v  Mem02proof.v  Mem0Openproof.v  Mem1.v  Mem12proof.v  Mem2.v  MemOpen.v  MemOpen0proof.v  MemOpenWhole.v  Open.v  OpenDef.v
proofmode/: HSim.v  HSim2.v  HTactics.v  HTactics2.v  HTactics2NoIndex.v  HTactics2Old.v  HTacticsNoIndex.v  HTacticsOld.v  HTacticsdouble.v  IProofMode.v  IProofMode2.v  ISim.v  ISim2.v  ProofMode.v
spc/: Hoare.v  Hoare2.v  HoareDef.v  HoareOld.v  Hoareproof0.v  Hoareproof02.v  Hoareproof0Old.v  IPM.v  PCM.v  (+19 more)
(+1450 files in other folders)
