opam-version: "2.0"
maintainer: "Youngju Song <youngju@mpi-sws.org>"
authors: "Youngju Song, Minki Cho, Dongjae Lee, Chung-Kil Hur"
homepage: "https://gitlab.mpi-sws.org/youngju/cccr"
bug-reports: "https://gitlab.mpi-sws.org/youngju/cccr/issues"

synopsis: "Conditional Contextual Refinement"

depends: [
  "coq" { (>= "8.15.0" & < "8.16~") | (= "dev") }
  "coq-paco" { (= "4.1.2") }
  # "coq-ext-lib" { (= "0.11.3") }
  "coq-itree" { (= "4.0.0") }
  "coq-ordinal" { (>= "0.5.0") }
  # "coq-stdpp" { (= "1.5.0") }
  "coq-iris" { (= "3.6.0") }
  "coq-compcert" { (>= "3.11") }
  "ocamlbuild" { (>= "0.14.0") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
