opam-version: "2.1.2"
maintainer: "Youngju Song <youngju@mpi-sws.org>"
authors: "Youngju Song, Minki Cho, Dongjae Lee, Chung-Kil Hur, Michael Sammler, Derek Dreyer"

synopsis: "Conditional Contextual Refinement"

depends: [
  "coq" { (= "8.15.2") }
  "coq-paco" { (= "4.1.2") }
  "coq-itree" { (= "4.0.0") }
  "coq-ordinal" { (= "0.5.0") }
  "coq-iris" { (= "3.6.0") }
  "coq-compcert" { (= "3.11") }
  "ocamlbuild" { (= "0.14.1") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
